Task instance Java/9